examples/test/testpolicy13418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13418
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key0: value38
      key10: value49
      key13: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value8
      podSelector:
        matchLabels:
          key40: value7
          key25: value46
